<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.erc.canopysentinalg.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.erc.canopysentinalg.ui.map.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map"/>

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.erc.canopysentinalg.ui.analytics.AnalyticsFragment"
        android:label="@string/nav_analytics"
        tools:layout="@layout/fragment_analytics"/>

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.erc.canopysentinalg.ui.alerts.AlertsFragment"
        android:label="@string/nav_alerts"
        tools:layout="@layout/fragment_alerts"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.erc.canopysentinalg.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>
